--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 addict==2.4.0
-appnope @ file:///home/conda/feedstock_root/build_artifacts/appnope_1707233003401/work
+appnope 
 attrs==23.2.0
-backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
-backports.functools-lru-cache @ file:///home/conda/feedstock_root/build_artifacts/backports.functools_lru_cache_1702571698061/work
+backcall 
+backports.functools-lru-cache 
 bagpy==0.5
 bitarray==2.9.2
 bitstring==4.1.4
 boxsdk==3.9.2
 catkin-pkg==1.0.0
-certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1707022139797/work/certifi
+certifi 
 charset-normalizer==3.3.2
 click==8.1.7
 ConfigArgParse==1.7
@@ -18,10 +18,10 @@ dash==2.15.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
-debugpy @ file:///Users/runner/miniforge3/conda-bld/debugpy_1660619094083/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+debugpy 
+decorator 
 docutils==0.20.1
-entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1643888246732/work
+entrypoints 
 exceptiongroup==1.2.0
 fastjsonschema==2.19.1
 Flask==2.2.5
@@ -34,45 +34,45 @@ imageio==2.31.2
 importlib-metadata==6.7.0
 importlib-resources==5.12.0
 iniconfig==2.0.0
-ipykernel @ file:///Users/runner/miniforge3/conda-bld/ipykernel_1666723502644/work
-ipython @ file:///Users/runner/miniforge3/conda-bld/ipython_1651240787717/work
+ipykernel 
+ipython 
 itsdangerous==2.1.2
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
+jedi 
 Jinja2==3.0.3
 joblib==1.3.2
 jsonschema==4.17.3
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1673615989977/work
-jupyter_core @ file:///Users/runner/miniforge3/conda-bld/jupyter_core_1658332423024/work
+jupyter_client 
+jupyter_core 
 kiwisolver==1.4.5
 MarkupSafe==2.1.5
 matplotlib==3.5.3
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1660814786464/work
+matplotlib-inline 
 MouseInfo==0.1.3
 nbformat==5.7.0
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
+nest_asyncio 
 numpy==1.21.6
 open3d==0.17.0
 opencv-python==4.9.0.80
 outcome==1.3.0.post0
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1696202382185/work
+packaging 
 pandas==1.3.5
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
+parso 
+pexpect 
+pickleshare 
 Pillow==9.5.0
 pkgutil_resolve_name==1.3.10
 platformdirs==4.0.0
 plotly==5.18.0
 pluggy==1.2.0
 pooch==1.8.0
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1702399386289/work
-psutil @ file:///Users/runner/miniforge3/conda-bld/psutil_1666155463851/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+prompt-toolkit 
+psutil 
+ptyprocess 
 py3rosmsgs==1.18.2
 PyAutoGUI==0.9.54
 pycryptodomex==3.20.0
 PyGetWindow==0.0.9
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1700607939962/work
+Pygments 
 PyMsgBox==1.0.9
 pynput==1.7.6
 pyobjc-core==9.2
@@ -88,13 +88,13 @@ PyScreeze==0.1.30
 pyserial==3.5
 PySocks==1.7.1
 pytest==7.4.4
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
+python-dateutil 
 pytools==2022.1.12
 pytweening==1.2.0
 pytz==2024.1
 pyvista==0.38.6
 PyYAML==6.0.1
-pyzmq @ file:///Users/runner/miniforge3/conda-bld/pyzmq_1663830586878/work
+pyzmq 
 requests==2.31.0
 requests-toolbelt==1.0.0
 retrying==1.3.4
@@ -107,23 +107,23 @@ scooby==0.7.3
 seaborn==0.12.2
 selenium==4.11.2
 setuptools-scm==7.1.0
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+six 
 sniffio==1.3.1
 sortedcontainers==2.4.0
 tenacity==8.2.3
 threadpoolctl==3.1.0
 toml==0.10.2
 tomli==2.0.1
-tornado @ file:///Users/runner/miniforge3/conda-bld/tornado_1656938098105/work
+tornado 
 tqdm==4.66.2
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1675110562325/work
+traitlets 
 trimesh==4.1.4
 trio==0.22.2
 trio-websocket==0.11.1
 typing_extensions==4.7.1
 urllib3==2.0.7
 vtk==9.3.0
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1699959196938/work
+wcwidth 
 Werkzeug==2.2.3
 wsproto==1.2.0
 zipp==3.15.0
