--- a/requirements.txt
+++ b/requirements.txt
@@ -1,129 +1,38 @@
-addict==2.4.0
-appnope 
 attrs==23.2.0
-backcall 
-backports.functools-lru-cache 
-bagpy==0.5
-bitarray==2.9.2
-bitstring==4.1.4
 boxsdk==3.9.2
-catkin-pkg==1.0.0
-certifi 
+certifi==2024.2.2
 charset-normalizer==3.3.2
-click==8.1.7
-ConfigArgParse==1.7
-cv-bridge==1.13.0.post0
-cycler==0.11.0
-dash==2.15.0
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-debugpy 
-decorator 
-docutils==0.20.1
-entrypoints 
-exceptiongroup==1.2.0
-fastjsonschema==2.19.1
-Flask==2.2.5
-fonttools==4.38.0
-genpy==2022.1
-gnupg==2.3.1
 h11==0.14.0
 idna==3.6
-imageio==2.31.2
-importlib-metadata==6.7.0
-importlib-resources==5.12.0
-iniconfig==2.0.0
-ipykernel 
-ipython 
-itsdangerous==2.1.2
-jedi 
-Jinja2==3.0.3
-joblib==1.3.2
-jsonschema==4.17.3
-jupyter_client 
-jupyter_core 
-kiwisolver==1.4.5
-MarkupSafe==2.1.5
-matplotlib==3.5.3
-matplotlib-inline 
 MouseInfo==0.1.3
-nbformat==5.7.0
-nest_asyncio 
-numpy==1.21.6
-open3d==0.17.0
+numpy==1.26.4
 opencv-python==4.9.0.80
 outcome==1.3.0.post0
-packaging 
-pandas==1.3.5
-parso 
-pexpect 
-pickleshare 
-Pillow==9.5.0
-pkgutil_resolve_name==1.3.10
-platformdirs==4.0.0
-plotly==5.18.0
-pluggy==1.2.0
-pooch==1.8.0
-prompt-toolkit 
-psutil 
-ptyprocess 
-py3rosmsgs==1.18.2
 PyAutoGUI==0.9.54
-pycryptodomex==3.20.0
 PyGetWindow==0.0.9
-Pygments 
 PyMsgBox==1.0.9
-pynput==1.7.6
-pyobjc-core==9.2
-pyobjc-framework-ApplicationServices==9.2
-pyobjc-framework-Cocoa==9.2
-pyobjc-framework-Quartz==9.2
-pyparsing==3.1.1
+pyobjc-core==10.2
+pyobjc-framework-Cocoa==10.2
+pyobjc-framework-Quartz==10.2
 pyperclip==1.8.2
-pyquaternion==0.9.9
 PyRect==0.2.0
-pyrsistent==0.19.3
 PyScreeze==0.1.30
-pyserial==3.5
 PySocks==1.7.1
-pytest==7.4.4
-python-dateutil 
-pytools==2022.1.12
+python-dateutil==2.9.0.post0
 pytweening==1.2.0
-pytz==2024.1
-pyvista==0.38.6
-PyYAML==6.0.1
-pyzmq 
 requests==2.31.0
 requests-toolbelt==1.0.0
-retrying==1.3.4
-rosnumpy==0.0.5.2
-rospkg==1.5.0
-rubicon-objc==0.4.6
-scikit-learn==1.0.2
-scipy==1.7.3
-scooby==0.7.3
-seaborn==0.12.2
-selenium==4.11.2
-setuptools-scm==7.1.0
-six 
+rubicon-objc==0.4.7
+scipy==1.12.0
+selenium==4.18.1
+setuptools==68.2.2
+six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
-tenacity==8.2.3
-threadpoolctl==3.1.0
 toml==0.10.2
-tomli==2.0.1
-tornado 
-tqdm==4.66.2
-traitlets 
-trimesh==4.1.4
-trio==0.22.2
+trio==0.25.0
 trio-websocket==0.11.1
-typing_extensions==4.7.1
-urllib3==2.0.7
-vtk==9.3.0
-wcwidth 
-Werkzeug==2.2.3
+typing_extensions==4.10.0
+urllib3==2.2.1
+wheel==0.41.2
 wsproto==1.2.0
-zipp==3.15.0
