--- a/config.yaml
+++ b/config.yaml
@@ -45,7 +45,7 @@ labeling:
 
 cloud:
   eml_id: yt633@cornell.edu
-  eml_secret: FKVG34H9!
+  eml_secret: XXXXXX
   client_id: 8vojaaev2osqplchabnczmcmzyou83w0
   client_secret: BrR6NDEpSZm4jNIZ5VdlCComd72z1SIZ
   SHARED_LINK_URL: https://cornell.box.com/s/zb9ycfdv0s6afn5p2hdwwjqxm3ghfq3d
