--- a/config.yaml
+++ b/config.yaml
@@ -25,27 +25,27 @@ labeling:
   
   method: linear    # interpolation parameter, when completing labeling, we will use it.
   interpolation: False
-  frame_rate: 10  # pls set the frame rate as asked
+  frame_rate: 1  # pls set the frame rate as asked
   distance_threshold: 10  # used for reference, if the distance between two points is less than this, we will refer it.
   color: 
-    -(0, 255, 0)
-    -(255, 0, 0)
-    -(0, 0, 255
-    -(255, 255, 0)
-    -(255, 0, 255)
-    -(0, 255, 255)
-    -(128, 0, 0
-    -(0, 128, 0)
-    -(0, 0, 128)
-    -(128, 128, 0)
-    -(128, 0, 128
-    -(0, 128, 128)
-    -(64, 0, 0)
-    -(0, 64, 0)
+    - [0, 255, 0]
+    - [255, 0, 0]
+    - [0, 0, 255]
+    - [255, 255, 0]
+    - [255, 0, 255]
+    - [0, 255, 255]
+    - [128, 0, 0]
+    - [0, 128, 0]
+    - [0, 0, 128]
+    - [128, 128, 0]
+    - [128, 0, 12]
+    - [0, 128, 128]
+    - [64, 0, 0]
+    - [0, 64, 0]
 
 cloud:
   eml_id: yt633@cornell.edu
-  eml_secret: XXXXXX
+  eml_secret: FKVG34H9!
   client_id: 8vojaaev2osqplchabnczmcmzyou83w0
   client_secret: BrR6NDEpSZm4jNIZ5VdlCComd72z1SIZ
   SHARED_LINK_URL: https://cornell.box.com/s/zb9ycfdv0s6afn5p2hdwwjqxm3ghfq3d
